<resources>
    <!-- Application name -->
    <string name="app_name">Note V</string>

    <!-- Titles -->
    <string name="tv_title_text">Title:</string>
    <string name="tv_priority_level_text">Priority level:</string>
    <string name="tv_content_text">Content:</string>

    <!-- Hints -->
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="search_hint">Search</string>

    <!-- Menu items names -->
    <string name="search_item_name">Search</string>
    <string name="sort_item_name">Sort by</string>
    <string name="newest_option">Newest</string>
    <string name="oldest_option">Oldest</string>
    <string name="low_level_option">Low level</string>
    <string name="high_level_option">High level</string>
    <string name="save_item_name">Save</string>
    <string name="delete_item_name">Delete</string>

    <!-- String-Arrays -->
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <!-- Formatter Pattern -->
    <string name="date_format">MMMM dd  yyyy</string>

    <!-- Action bar Titles -->
    <string name="notes_list_activity_titles">Notes</string>
    <string name="add_note_activity_title">Add</string>
    <string name="edit_note_activity_title">Edit</string>

    <!-- Error -->
    <string name="error_empty_text">Empty</string>

    <!-- Dialog -->
    <string name="dialog_cancel">Cancel</string>
    <!-- Edit Note -->
    <string name="dialog_edit_note_title">Edit Note</string>
    <string name="dialog_edit_note_message">Are you sure you want to make some changes to the current note?</string>
    <string name="dialog_edit_note_positive">Edit</string>
    <!-- Delete Note -->
    <string name="dialog_delete_note_title">Delete Note</string>
    <string name="dialog_delete_note_message">Are you sure you want to delete this note?</string>
    <string name="dialog_delete_note_positive">Delete</string>
</resources>